--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,16 +62,22 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/background/splash.png
-    - assets/logo/primary_logo.png
-    - assets/background/onboardingscreen.png
-    - assets/pictures/onboarding1.svg
-    - assets/pictures/onboarding2.svg
-    - assets/pictures/onboarding3.svg
-    - assets/pictures/onboarding2s.svg
-    - assets/pictures/onboarding1.png
-    - assets/background/auth_bg1.png
+    # - assets/background/splash.png
+    # - assets/logo/primary_logo.png
+    # - assets/background/onboardingscreen.png
+    # # - assets/pictures/onboarding1.svg
+    # # - assets/pictures/onboarding2.svg
+    # # - assets/pictures/onboarding3.svg
+    # # - assets/pictures/onboarding2s.svg
+    # - assets/pictures/
+    # - assets/pictures/onboarding1.png
+    # - assets/background/auth_bg1.png
+    # - assets/icons/google.png
     # - assets/
+    - assets/background/
+    - assets/icons/
+    - assets/images/
+    - assets/pictures/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
