Sunday Morning progress

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,8 @@ flutter:
     - assets/icons/
     - assets/images/
     - assets/pictures/
+    - assets/pictures/course_thumbnail/
+    - assets/logo/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
